// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation 1`] = `
"UglifyJs Plugin Invalid Options

options['doesntExist'] is an invalid additional property
"
`;

exports[`validation 2`] = `
"UglifyJs Plugin Invalid Options

options.cache should be boolean
options.cache should be string
options.cache should match exactly one schema in oneOf
"
`;

exports[`validation 3`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`validation 4`] = `
"UglifyJs Plugin Invalid Options

options.parallel should be boolean
options.parallel should be integer
options.parallel should match exactly one schema in oneOf
"
`;

exports[`validation 5`] = `
"UglifyJs Plugin Invalid Options

options.sourceMap should be boolean
"
`;

exports[`validation 6`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions should be object
"
`;

exports[`validation 7`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ie8 should be boolean
"
`;

exports[`validation 8`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`validation 9`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`validation 10`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be integer
"
`;

exports[`validation 11`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be >= 5
"
`;

exports[`validation 12`] = `
"UglifyJs Plugin Invalid Options

options.uglifyOptions.ecma should be <= 8
"
`;
